--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
+  <!-- <script src="https://telegram.org/js/telegram-web-app.js"></script>
   <script>
     Telegram.WebApp.expand();
-  </script>
+  </script> -->
 </html>
